--- a/components/MainCard.module.css
+++ b/components/MainCard.module.css
@@ -1,18 +1,17 @@
 .wrapper {
-  text-align: center;
-  padding: 30px;
+  background: rgba(255, 255, 255, 0.95);
+  padding: 20px;
+  border-radius: 20px;
 }
 
-.location {
-  font-size: 38px;
-  margin-bottom: 10px;
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 14px;
 }
 
-.description {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.temperature {
-  font-size: 84px;
+@media only screen and (max-width: 475px) {
+  .content {
+    grid-template-columns: 1fr;
+  }
 }
